添加适合spirng boot的插件

--- a/mybatisPlugin/pom.xml
+++ b/mybatisPlugin/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+        <!--通用Mapper -->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
+            <version>3.4.0</version>
+        </dependency>
         <!-- log start -->
         <dependency>
             <groupId>log4j</groupId>
