--- a/mybatisPlugin/pom.xml
+++ b/mybatisPlugin/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.21</version>
         </dependency>
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc</artifactId>
+            <version>6</version>
+        </dependency>
     </dependencies>
 
 </project>
